[Fixes #212] Fix clipped text in select boxes on Firefox

--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -62,12 +62,6 @@ form {
   }
 }
 
-@-moz-document url-prefix() {
-  .form-field select {
-    text-indent: -2px;
-  }
-}
-
 .form-field--nonempty {
   border-color: $brand-primary-300;
 }
